--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -15,13 +15,27 @@ set(SOURCES_common
         src/AAF_buffer.c    include/AAF_buffer.h
         src/dup_handle.c    include/dup_handle.h
         src/AAF_block.c     include/AAF_block.h
-        src/func_dyn.c      include/func_dyn.h
         src/is_admin.c      include/is_admin.h
         src/log_disk.c      include/log_disk.h
         src/qp_timer.c      include/qp_timer.h
         src/zeros_array.c   include/zeros_array.h
         src/shared_malloc.c include/shared_malloc.h
         )
+
+set(SOURCES_common_AVX2
+        src/zeros_array_avx2.c
+        )
+set(SOURCES_common_AVX512
+        src/zeros_array_avx512.c
+        )
+
+list(APPEND SOURCES_common
+        ${SOURCES_common_AVX2} ${SOURCES_common_AVX512}
+        )
+
+set_source_files_properties(${SOURCES_common_AVX2}   PROPERTIES COMPILE_OPTIONS "-mavx2")
+set_source_files_properties(${SOURCES_common_AVX512} PROPERTIES COMPILE_OPTIONS "-mavx512f")
+
 set(SOURCES_all ${SOURCES_common})
 
 set(ALL_TARGETS)
